2004-09-15  Stephen J. Turnbull  <stephen@xemacs.org>

	Fix bug: apropos errors if a defalias refers to an undefined
	function.  <87pt4pmdcs.fsf@tleepslib.sk.tsukuba.ac.jp>

	* apropos.el (apropos):
	(apropos-command):
	* help.el (frob-help-extents):
	* help-macro.el (make-help-screen):
	* hyper-apropos.el (hyper-apropos-grok-functions):
	(hyper-apropos-get-doc):
	Catch void-function error thrown by `documentation'.

2004-09-07  Steve Youngs  <steve@youngs.au.com>

	* packages.el (package-require): Fix incorrect arg to format.
	This fixes a `format specifier' error.

2004-08-15  Jan Rychter <jwr@xemacs.org>

	* window-xemacs.el (really-set-window-configuration): deal
	gracefully with the case when the buffer previously saved in the
	configuration (and that we want to switch to) has been
	killed. Switch to the next buffer on the buffer-list in that case.

2004-08-13  Jerry James  <james@xemacs.org>

	* bytecomp.el (forward-word): Tell the byte compiler the correct
	number of arguments to forward-word.

2004-07-02  Malcolm Purvis  <malcolmp@xemacs.org>

	* widgets-gtk.el (gtk-widget-instantiate-notebook-internal):
	Loading items into the notebook is now done by C code.
	* widgets-gtk.el (gtk-widget-instantiate-internal):
	Style no longer changed.

2004-06-24  Jerry James  <james@xemacs.org>

	* cl-compat.el: Synch with Emacs 21.3.
	* cl-extra.el: Ditto.
	* cl-extra.el (cl-push): Removed because superfluous.
	* cl-extra.el (cl-pop): Removed because superfluous.
	* cl-extra.el (cl-emacs-type)): Removed because unused.
	* cl-extra.el (cl-map-keymap): Just alias map-keymap.
	* cl-extra.el (cl-map-keymap-recursively): Drop Emacs 18 support.
	* cl-extra.el (cl-copy-tree): Removed because superfluous.
	* cl-extra.el (cl-remprop): New alias.
	* cl-extra.el (cl-make-hash-table): New alias.
	* cl-extra.el (cl-hash-table-p): New alias.
	* cl-extra.el (cl-hash-table-count): New alias.
	* cl-macs.el: Synch with Emacs 21.3.
	* cl-macs.el (cl-push): Removed because superfluous.